# whisper-dictation

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-20-whisper-dictation.md  2026-07-21-push-to-talk.md
docs/superpowers/specs/: 2026-07-20-whisper-dictation-design.md  2026-07-21-inline-voice-commands-design.md  2026-07-21-push-to-talk-design.md  2026-07-21-smart-spacing-design.md  2026-07-22-persistent-mic-stream-design.md  2026-07-22-ptt-hotplug-design.md
src/dictate/: __init__.py  audio.py  client.py  commands.py  config.py  daemon.py  inject.py  notify.py  ptt.py  textproc.py  transcribe.py
systemd/: dictate-ptt.service  dictate.service
tests/: test_audio.py  test_client.py  test_commands.py  test_config.py  test_daemon.py  test_inject.py  test_ptt.py  test_smoke.py  test_textproc.py  test_transcribe.py
